--- a/Pages/DeductOrder.cshtml
+++ b/Pages/DeductOrder.cshtml
@@ -163,7 +163,7 @@
 
                     <div class="form-group " style="width: 48%;">
                         <label>Party</label>
-                        <select asp-for="MaterialRequest.WarehouseId" name="PartyId" id="party" class="form-control" asp-items="ViewBag.Destinations" readonly>
+                        <select asp-for="MaterialRequest.RequestingSector" name="PartyId" id="party" class="form-control" asp-items="ViewBag.Destinations" readonly>
                         </select>
                     </div>
                 </div>
