--- a/Pages/ReturnRequestsDetails.cshtml
+++ b/Pages/ReturnRequestsDetails.cshtml
@@ -184,7 +184,7 @@
     <a href="/ViewReturnRequests" class="btn btn-secondary mt-3">Back to List</a>
 </div>
 
-<div class="table-size"  id="printArea" style="display: none;" dir="@Model.dir">
+<div class="table-size"  id="printArea" style="display: none; width: 826px;" dir="@Model.dir">
 
     <div align="center" class="header-title">
         @ViewData["Title"]
