--- a/Pages/ViewDispensedReport.cshtml
+++ b/Pages/ViewDispensedReport.cshtml
@@ -42,7 +42,7 @@
         var StoreName = Model.Stores.FirstOrDefault(i => i.StoreId == MaterialRequest.WarehouseId)?.StoreName ?? "";
         <div class="card mb-4 border shadow-sm">
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                <strong>@Model.lblMaterialDispensing - @Model.lblSerialNumber: @MaterialRequest.SerialNumber</strong>
+                <strong>@Model.lblMaterialDispensing - Serial No: @MaterialRequest.SerialNumber</strong>
                 <div>
                     @* <a asp-page="/EditReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-success me-2 text-white">Edit</a> *@
                     @* <a asp-page="/PrintReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-secondary">Print</a> *@
@@ -79,7 +79,7 @@
                     <dt class="col-sm-3">@Model.lblFiscalYear</dt>
                     <dd class="col-sm-3">@MaterialRequest.FiscalYear</dd>
 
-                    <dt class="col-sm-3">@Model.lblRequestDate</dt>
+                    <dt class="col-sm-3">Request Date</dt>
                     <dd class="col-sm-3">@MaterialRequest.CreatedAt?.ToString("dd-MM-yyyy")</dd>
 
                     <dt class="col-sm-3">@Model.lblRequestingSector</dt>
@@ -88,7 +88,7 @@
                     <dt class="col-sm-3">@Model.lblSector</dt>
                     <dd class="col-sm-3">@MaterialRequest.Sector</dd>
                     
-                    <dt class="col-sm-3">@Model.lblReceivingWarehouse</dt>
+                    <dt class="col-sm-3">Receiving Warehouse</dt>
                     <dd class="col-sm-3">@StoreName</dd>
 
                     <dt class="col-sm-3">@Model.lblRequestDocumentType</dt>
@@ -193,7 +193,7 @@
                         <td style="width: 15%;border: none;font-size: 14px;"></td>
                         <td style="width: 15%;border: none;font-size: 14px;"></td>
                         <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="right">@Model.lblOrderDate</td>
-                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;"> @rep.CreatedAt?.ToString("yyyy-MM-dd")</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;"> @rep.CreatedAt?.ToString("dd-MM-yyyy")</td>
                         
                     </tr>
                     <tr>
@@ -268,7 +268,7 @@
         <tr>
             <td colspan="2" style="text-align: center;font-size: 14px;">
                 @Model.WarehouseManager<br />@rep.CreatedAt?.ToString("dd-MM-yyyy")</td>
-            <td colspan="1">
+            <td colspan="1"  style=" text-align: center;font-size: 14px;">
                 @if (rep.DeptManagerApprovalDate != null)
                 {
                     <span>
@@ -279,7 +279,7 @@
                 }
             </td>
 
-            <td colspan="3.5">
+            <td colspan="3.5" style=" text-align: center;font-size: 14px;">
                 @if (rep.KeeperApprovalDate != null)
                 {
                     <span>
@@ -287,7 +287,7 @@
                     </span>
                 }
             </td>
-            <td colspan="3">
+            <td colspan="3" style=" text-align: center;font-size: 14px;">
                 @if (rep.SupervisorApprovalDate != null)
                 {
                     <span>
