--- a/Pages/Home.cshtml
+++ b/Pages/Home.cshtml
@@ -259,42 +259,51 @@
 
         @if (Model.ItemCardminimum?.Count > 0 || Model.ItemCardCeiling?.Count > 0 || Model.ItemCardReorder?.Count > 0 || Model.ItemCardNotMoved?.Count > 0)
         {
-
+        <div>
             <div class="alert alert-info d-flex flex-column">
                 @if (Model.ItemCardminimum?.Count > 0)
                 {
-                    <div class="mb-2">
-                        <span><b>@Model.lblAlert</b> @Model.ItemCardminimum.Count @Model.lblMinimumQuantity</span>
-                        <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-minimum">View</a>
+                    <div>
+                        <div class="mb-2">
+                            <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardminimum.Count @Model.lblMinimumQuantity</span>
+                            <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-minimum">View</a>
+                        </div>
                     </div>
                 }
 
                 @if (Model.ItemCardCeiling?.Count > 0)
                 {
-                    <div class="mb-2">
-                        <span><b>@Model.lblAlert</b> @Model.ItemCardCeiling.Count @Model.lblMaximumQuantity</span>
-                        <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-maximum">View</a>
+                    <div>
+                        <div class="mb-2">
+                            <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardCeiling.Count @Model.lblMaximumQuantity</span>
+                            <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-maximum">View</a>
+                        </div>
                     </div>
                 }
 
 
                 @if (Model.ItemCardReorder?.Count > 0)
                 {
-                    <div class="mb-2">
-                        <span><b>@Model.lblAlert</b> @Model.ItemCardReorder.Count @Model.lblReorderQuantity</span>
-                        <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-reorder">View</a>
+                    <div>
+                        <div class="mb-2">
+                            <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardReorder.Count @Model.lblReorderQuantity</span>
+                            <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-reorder">View</a>
+                        </div>
                     </div>
                 }
 
 
                 @if (Model.ItemCardNotMoved?.Count > 0)
                 {
-                    <div class="mb-0">
-                        <span><b>@Model.lblAlert</b> @Model.ItemCardNotMoved.Count @Model.lblNotMoved3</span>
-                        <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-notmoved">View</a>
+                    <div>
+                        <div class="mb-0">
+                            <span><img src="images/alert.png" alt="alert" /> <b>@Model.lblAlert</b> @Model.ItemCardNotMoved.Count @Model.lblNotMoved3</span>
+                            <a class="btn btn-sm btn-primary ms-2" href="/Alerts/Index#sectionn-notmoved">View</a>
+                        </div>
                     </div>
                 }
             </div>
+        </div>
         }
 
 
