--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -55,7 +55,7 @@
                         </form>
                     }
                     
-                    <button id="PrintReport" class="btn btn-primary">Print</button>
+                    <button id="PrintReport" class="btn btn-primary">@Model.lblPrint</button>
 
 
                 </div>
