--- a/Pages/ViewItemCards.cshtml
+++ b/Pages/ViewItemCards.cshtml
@@ -45,7 +45,7 @@
 </div> *@
 
 <a href="ManageItemCards"><button  class="btn btn-secondary">Back</button></a>
-<button id="printBtn" class="btn btn-primary">Print</button>
+<button id="printBtn" class="btn btn-primary">@Model.lblPrint</button>
 
 
 
