--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -242,7 +242,7 @@
                 @if (Model.Lang == "en")
                 {
                     <li class="nav-item @("active")">
-                        <a href="./Home?lang=ar" class="nav-link">
+                        <a href="~/Home?lang=ar" class="nav-link">
                             <span class="sidebar-icon">
                                 <svg class="icon icon-xxs ms-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                     <rect width="20" height="10" fill="#006341" />
