--- a/Pages/ReceivingItems.cshtml
+++ b/Pages/ReceivingItems.cshtml
@@ -284,7 +284,7 @@
                                 <th scope="col" class="border-0">Receiving Date</th>
                             }
 
-                            @if (Model.SelectedColumns.Contains("recipientSector"))
+                            @if (Model.SelectedColumns.Contains("receipientSector"))
                             {
                                 <th scope="col" class="border-0">Receipient Sector</th>
                             }
@@ -350,7 +350,7 @@
                                     {
                                         <td>@req.ReceivingDate.ToString("yyyy-MM-dd")</td>
                                     }
-                                    @if (Model.SelectedColumns.Contains("recipientSector"))
+                                    @if (Model.SelectedColumns.Contains("receipientSector"))
                                     {
                                         <td>@req.RecipientSector</td>
                                     }
@@ -508,7 +508,7 @@
                         <th scope="col" class="border-0">Receiving Date</th>
                     }
 
-                    @if (Model.SelectedColumns.Contains("recipientSector"))
+                    @if (Model.SelectedColumns.Contains("receipientSector"))
                     {
                         <th scope="col" class="border-0">Receipient Sector</th>
                     }
@@ -569,7 +569,7 @@
                             {
                                 <td>@req.ReceivingDate.ToString("yyyy-MM-dd")</td>
                             }
-                            @if (Model.SelectedColumns.Contains("recipientSector"))
+                            @if (Model.SelectedColumns.Contains("receipientSector"))
                             {
                                 <td>@req.RecipientSector</td>
                             }
