--- a/Pages/Rep_HazardMaterial.cshtml
+++ b/Pages/Rep_HazardMaterial.cshtml
@@ -156,7 +156,7 @@
                         <label class="form-check-label" for="itemCode">ItemCode</label>
                     </div>
                     <div class="form-check mb-1">
-                        <input class="form-check-input column-checkbox" name="columns" type="checkbox" value="action"
+                        <input class="form-check-input column-checkbox" name="columns" type="checkbox" value="itemName"
                             id="itemName" @(Model.SelectedColumns.Contains("itemName") ? "checked" : "")>
                         <label class="form-check-label" for="itemName">ItemName</label>
                     </div>
