--- a/Pages/ChangePassword.cshtml
+++ b/Pages/ChangePassword.cshtml
@@ -55,11 +55,11 @@
                     </li>
                     <li class="breadcrumb-item d-flex align-items-center">
                         <img src="images/password.png" alt="Home" width="16" height="16" class="me-2" />
-                        @Model.lblChangePasswords
+                        @Model.lblUserProfile
                     </li>
                 </ol>
             </nav>
-                <h1 class="h4">@Model.lblChangePasswords</h1>
+                <h1 class="h4">@Model.lblUserProfile</h1>
                <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
             </div>
         </div>
