--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -407,7 +407,7 @@
                                     firstStore = false;
                                     <tr>
                                         <td style="min-width:100px;  width:100px;">
-                                            <button class="btn btn-sm toggle-collapse" data-toggle="collapse"
+                                            <button class="btn btn-sm toggle-collapse" 
                                                     data-target="#@($"demo_{item.StoreNumber}_{item.StoreName.Replace(" ", "_")}")">
                                                 <img class="icon icon-xs border-0" src="images/collapse.png">
                                             </button>
