--- a/Pages/AddShelves.cshtml
+++ b/Pages/AddShelves.cshtml
@@ -125,7 +125,7 @@
                                     {
                                         foreach (var item in Model.Stores)
                                         {
-                                            if(item.IsActive == 1 && item.Ended == null){
+                                            if( item.Ended == null){
                                             <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
                                         }
                                     }
