--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -286,6 +286,7 @@
         wrapper.addEventListener("click", function (e) {
             if (e.target.classList.contains("remove-entry")) {
                 const entries = wrapper.querySelectorAll(".return-entry");
+                console.log("entries.length", entries.length)
                 if (entries.length > 1) {
                     e.target.closest(".return-entry").remove();
                 } else {
@@ -384,6 +385,20 @@
                     itemSelectEnglish.appendChild(optionEnglish);
             });
         }
+
+        @* const itemToBeRemoved = document.getElementById("returnEntriesWrapper");
+        document.addEventListener("click", function (e) {
+                              console.log("remove entry")
+
+            if (e.target.classList.contains("remove-entry")) {
+                const entries = itemToBeRemoved.querySelectorAll(".return-entry");
+                if (entries.length > 1) {
+                    e.target.closest(".return-entry").remove();
+                } else {
+                    alert("At least one Item is required.");
+                }
+            }
+        }); *@
 
 
     </script>
@@ -539,8 +554,8 @@
 
                             </div>
                         <div class="col-lg-12 col-sm-12">
-                            @for(int i =0; i < Model.ItemsForReport.Count; i++){
-                                <div id="returnEntriesWrapper">
+                            <div id="returnEntriesWrapper">
+                                @for(int i =0; i < Model.ItemsForReport.Count; i++){
                                     <div class="return-entry border p-3 mb-3 rounded position-relative">
 
                                         <div class="d-flex my-4">
@@ -675,12 +690,16 @@
                                             <label for="Comments">@Model.lblComments</label>
                                             <input type="text" class="form-control" id="Comments_@i" asp-for="ItemsForReport[@i].Comments" name="ItemsForReport[@i].Comments"  />
                                         </div>
-                                        <button type="button" class="btn btn-danger btn-sm remove-entry me-3" style="position: absolute; top: 0; right: 0;">
-                                            @Model.lblRemove
-                                        </button>
+
+                                        @if(i != 0){
+                                            <button type="button" class="btn btn-danger btn-sm remove-entry me-3" style="position: absolute; top: 0; right: 0;">
+                                                @Model.lblRemove
+                                            </button>
+                                        }
                                     </div>
-                                </div>
-                            }
+                                }
+                            </div>
+                            
                             <div class="mb-3">
                                 <button type="button" class="btn btn-primary" id="addEntryBtn">@Model.lblAddMore</button>
                             </div
