--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LabMaterials.Pages.ViewReceivingReportModel
 @{
-    ViewData["Title"] = "View Receiving Reports";
+    ViewData["Title"] = @Model.lblViewReceivingReport;
 }
 
 <style>
@@ -42,7 +42,7 @@
         var report = Model.Report;
         <div class="card mb-4 border shadow-sm">
             <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                <strong>Receiving Report - Serial No: @report.SerialNumber</strong>
+                <strong>@Model.lblReceivingReport - @Model.lblSerialNo : @report.SerialNumber</strong>
                 <div class="d-flex gap-4">
                     @* <a asp-page="/EditReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-success me-2 text-white">Edit</a> *@
                     @* <a asp-page="/PrintReceivingReport" asp-route-id="@report.Id" class="btn btn-sm btn-secondary">Print</a> *@
